# wp-error

./: CHANGELOG.md  Cargo.toml  README.md
_gal/: adm.gxl
src/: codes.rs  config_error.rs  diagnostic_meta.rs  knowledge.rs  lib.rs  parse_error.rs  run_error.rs
src/error_handling/: strategy.rs
tests/: codes_test.rs
