[package]
name = "wp-error"
version = "0.8.4" # @gxl:set(version)
edition = "2024"
license = "Elastic-2.0"
authors = ["WarpParse Dev Team"]
description = "Structured, domain-specific error types and robustness strategies extracted from WarpParse"
documentation = "https://docs.rs/wp-error"
repository = "https://github.com/wp-labs/wp-error"
homepage = "https://github.com/wp-labs/wp-error"
readme = "README.md"
keywords = ["error", "robustness", "warp-parse", "orion", "wp"]
categories = ["config", "rust-patterns", "development-tools::debugging"]

[lib]
name = "wp_error"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
orion-error = "0.6"
orion-sec = "0.4"

wp-log = "0.2"
orion_conf =  { version = "0.5", features = ["toml"]}
derive_more = "2.1"
wp-connector-api =  "0.8"

unicode-segmentation = "1.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
serde_json = "1.0"
